--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,41 @@
+@media only screen and (max-width: 780px) {
+    div#currentPlace {
+        padding-top: 0%;
+        padding-left: 0px;
+        margin-top: 12%;
+        }
+    }
+
+#currentPlace {
+    padding-top: 0%;
+    padding-left: 0px;
+    margin-top: 1%;
+    }
+
 #map {
         height: 100%;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
-        height: 100%;
+        height: 80%;
         margin: 0;
-        padding: 0;
+        padding: 2%;
       }
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 7%; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
